tests/files/lexer_tests/should_fail/097.cmdr
//Should not parse due to missing semicolon
if (true) echo hi